# TestTaskPython

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  docs.json  pyproject.toml
src/: config.py  csv_parse.py  db_client.py  dto.py  elastic_search_client.py  lifespan.py  main.py  rest_handler.py  sql_models.py
